# Beam

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  compose.beam.yaml  compose.dependencies.yaml  compose.yaml  lefthook.yml  package.json  rust-toolchain.toml
.github/actions/install-rust-build-deps/: action.yml
.github/actions/setup-bun/: action.yml
.github/actions/setup-ffmpeg/: action.yml
.github/workflows/: lint.yml  rust.yml  typescript.yml
beam-auth/: .env.example  Cargo.toml  Containerfile  README.md
beam-auth/src/: config.rs  lib.rs  logging.rs  main.rs
beam-auth/src/server/: routes.rs  routes_tests.rs
beam-auth/src/utils/: mod.rs  models.rs  repository.rs  service.rs  service_tests.rs  session_store.rs
beam-docs/: package.json
beam-entity/: Cargo.toml
beam-entity/src/: admin_log.rs  lib.rs  season.rs
beam-index/: Cargo.toml  build.rs
beam-index/proto/: beam_index.proto
beam-index/src/: config.rs  grpc.rs  lib.rs  main.rs
beam-index/src/models/domain/: library.rs  movie.rs  show.rs
beam-index/src/repositories/: admin_log.rs  file.rs  library.rs  movie.rs  show.rs  stream.rs
beam-index/src/services/: hash.rs  index.rs  media_info.rs  mod.rs  notification.rs
beam-migration/: Cargo.toml
beam-migration/src/: lib.rs  m20260222_000001_create_admin_log.rs  main.rs
beam-stream/: Cargo.toml  Containerfile  README.md
beam-stream/examples/: export_openapi.rs
beam-stream/src/: config.rs  lib.rs  main.rs  state.rs
beam-stream/src/graphql/: auth_tests.rs  guard.rs  mod.rs  resolver_tests.rs
beam-stream/src/graphql/schema/: mod.rs
beam-stream/src/graphql/schema/admin/: mod.rs  queries.rs  subscriptions.rs
beam-stream/src/graphql/schema/media/: mutations.rs  queries.rs
beam-stream/src/models/: file.rs
beam-stream/src/models/domain/: admin_log.rs  file.rs  mod.rs  stream.rs
beam-stream/src/repositories/: admin_log.rs  file.rs  library.rs  mod.rs  movie.rs  show.rs  stream.rs  user.rs
beam-stream/src/routes/: graphql.rs  graphql_ws.rs  health.rs  mod.rs  stream.rs  stream_tests.rs
beam-stream/src/services/: admin_log.rs  auth.rs  grpc_index.rs  hash.rs  library.rs  library_tests.rs  media_info.rs  metadata.rs  metadata_tests.rs  mod.rs  notification.rs  transcode.rs  transcode_tests.rs
beam-stream/src/utils/: color.rs  file.rs  format.rs  hash.rs  media.rs  metadata.rs
beam-stream/src/utils/stream/: hls.rs  mod.rs
beam-web/: .gitignore  Containerfile  codegen.ts  package.json  vitest.config.ts
beam-web/src/: gql.ts  main.tsx  routeTree.gen.ts
beam-web/src/components/: Header.tsx
beam-web/src/hooks/: auth.tsx
beam-web/src/lib/: apiClient.ts
beam-web/src/routes/: __root.tsx  admin.tsx  explore.tsx  index.tsx  libraries.$id.tsx  libraries.tsx  login.tsx  media.$id.tsx  profile.tsx  register.tsx
old-api/beam-auth/: package.json
